--- a/style.css
+++ b/style.css
@@ -1,347 +1,479 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    scroll-behavior: smooth;
-    scroll-padding-top: 6rem;
-    scroll-margin-top: 6rem;
-    text-decoration: none;
-    text-transform: capitalize;
-    background-color: #F9F9F9;
     font-size: 16px;
-    overflow-x: hidden;
+    width: 100%;
 }
+
 body{
     background-color: #F9F9F9;
-    flex-direction: column;
 }
 
-.nav {
-    display: flex;
-    position: relative;
-    align-items: center;
+.header{
+    display: inline-flex;
     justify-content: space-between;
-    width: 66rem;
-    height: 61px;
+    align-items: center;
+    width: 100%;
+    padding: 10px 20px;
+}
+
+.logo{
+    display: flex;
+    width: 95px;
+    height: 78px;    
     flex-shrink: 0;
-    margin: 1rem auto;
-    padding: 1rem 0;
-    border: 4px solid #440381;
-    border-radius: 20px;
-    overflow: hidden;
-}
-
-.nav-links {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    list-style: none;
-    overflow: hidden;
-}
-
-.nav-links a:hover{
-    background-color: #440381;
-    color: #F9F9F9;
-    padding: 20px;
-    overflow: hidden;
-}
-
-.nav-links li {
-    margin: 0 1rem;
-    overflow: hidden;
-}
-
-.nav-links li:hover{
-    border-radius: 20px;
-}
-
-.nav-links a {
-    color: #440381;
-}
-
-.hire {
-    background-color: #440381;
-    color: #F9F9F9;
-    height: 3.8rem;
-    width: 10.75rem;
-    border-radius: 20px;
-    border: #440381;
-    cursor: pointer;
-}
-
-.hire:hover{
-    color: #F9F9F9;
-    background-color: #3332BB;
-    border: 6px solid #3332BB;
     
 }
 
-.section-1 {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.container-1 {
-    display: flex;
-    align-items: center;
-    width: 50%;
-    flex-direction: column;
-}
-
-.container-1 h1 {
-    font-size: 6rem;
-    line-height: normal;
-    font-weight: 700;
-    font-style: normal;
-    text-align: center;
-    height: 6.625rem;
-    overflow-y: hidden;
+.btn{
+    width: 210px;
+    height: 50px;
     flex-shrink: 0;
+    border-radius: 20px;
+    background: #440381;
+    color: #F9F9F9;
 }
 
-.container-1 h3 {
-    font-size: 2.5rem;
-    font-weight: 500;
-    line-height: normal;
-    text-align: center;
-
-}
- 
-
-#co-content {
-    width: 44rem;
-    height: 25rem;
-    justify-content: center;
+.section-1{
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
-#co-content p {
-    background: url(./Images/code.png);
+.h1-1{
+    font-size: 50px;
+    font-weight: 650;
+    font-style: normal;
+    height: 60px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.h3-1{
+    font-size: 14px;
+    font-weight:400;
+    font-style: normal;
+       
+}
+
+.p-1{
+    width: 1020px;
+    height: 190px;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 450;
+    font-style: normal;
+    line-height: normal;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    background: url(./Images/logo.svg);
     background-repeat: no-repeat;
     background-position: center;
-    text-align: center;
-    font-size: 2rem;
-    font-weight: 500;
-    line-height: normal;
-    height: 100%;
+    background-size: 23%;
 }
 
-.container-1 img {
-    width: 16.12rem;
-    height: 14rem;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2.5rem;
-}
-
-.container-2 {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 50%;
-    height: 100%;
-    position: relative;
-}
-
-.container-2 button {
-    background-color: #440381;
+.btn-2{
+    margin-top: 25px;
+    background-color: #3332BB;
     color: #F9F9F9;
-    height: 3.8rem;
-    width: 10.75rem;
+    width: 300px;
+    height: 70px;
+    flex-shrink: 0;
     border-radius: 20px;
-    border: #440381;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-    font-weight: 600;
-    line-height: normal;
-    margin-top: 2rem;
-    cursor: pointer;
-
 }
 
-.container-2 button:hover{
-    background: #3332BB;
-    color: #F9F9F9;
+.pc{
+    flex-shrink: 0;
+    margin-top: 20px;
 }
-#pc{
-    align-items: center;
-    width: 100%;
-    justify-content: center;
-}
-.section-2 {
+
+.section-2{
     background-color: #440381;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     flex-direction: column;
-    width: 100%;
-}
-
-.section-2 h1 {
-    color: #F9F9F9;
-    text-align: center;
-    font-size: 3rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    background-color: #440381;
-    margin-top: 30px;
-}
-
-.section-2 p {
-    color: #FFF;
-    text-align: center;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    background-color: #440381;
-    margin: 11px 70px;
-}
-
-.section-2 img{
-    width: 26.5rem;
-    height: 24rem;
-    background-color: #440381;
     align-items: center;
-    justify-content: center;
+    text-align: center;
+    color: #f9f9f9;
+    width: 100%;
+    height: 680px;
 }
 
-#info {
+.h1-2{
+    font-size: 27px;
+    font-weight: 500;
+    font-style: normal;
+    padding: 45px;
+    width: 715px;
+    height: 20px;
+}
+
+.p-2{
+    display: flex;
+    align-items: center;
+    width: 1200px;
+    height: 300px;
+    justify-content: center;
+    
+}
+
+.info{
     position: absolute;
-    width: 77.6rem;
-    height: 58.8rem;
-    margin-top: 729px;
-    background: none;
+    width: 750px;
+    height: 1700px;
+    flex-shrink: 0;
+    margin-top: 400px;
 }
 
 .section-3{
+    margin-top: 1460px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+}
+
+.h1-3{
+    width:550px;
+    height: 30px;
+    font-size: 40px;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.h3-3{
+    width: 830px;
+    height: 110px;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    margin-top: 900px;
 }
 
-.section-3 h1{
-    text-align: center;
-    font-size: 4rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+.images{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
+    grid-gap: 50px;
+    width: 600px;
+    height: 250px;
+
 }
 
-.section-3 h3{
-    text-align: center;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    width: 80%;
-    padding: 20px;
+.lan{
+    margin-top: 200px;
+    width: 1200px;
+    height: 250px;
+    flex-shrink: 0;
 }
 
-#projects{
-    padding: 20px;
-}
-
-#languages{
-    padding: 40px;
-}
 
 .section-4{
+    background-color: #3332BB;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     flex-direction: column;
-    width: 100%;
-    height: 52.31rem;
-    background: #3332BB;
-    padding: 30px;
+    align-items: center;
+    text-align: center;
 }
 
-.section-4 h1{
+.h1-4{
+    margin-top: 20px;
+    display: flex;
+    width: 420px;
+    height: 70px;
+    justify-content: center;
+    color:#F9F9F9;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 600;
+    
+}
+
+.h3-4{
+    width: 650px;
+    height: 100px;
     color: #F9F9F9;
-    text-align: center;
-    font-size: 4rem;
+    font-size: 20px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    background-color: #3332BB;
-    margin-top: 30px;
 }
 
-.section-4 h3{
-    color: #F9F9F9;
-    text-align: center;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    width: 50%;
-    padding: 20px;
-    background-color: #3332BB;
-}
-
-.section-4 img{
-    background-color: #3332BB;
-    width: 62rem;
-    height: 32.25rem;
+.review{
+    width: 800px;
+    height: 400px;
+    flex-shrink: 0;
+    margin-bottom: 20px;
 }
 
 .footer{
-    background-color:#D9D9D9;
-    width: 100%;
-    height: 24.3125rem;
     display: flex;
-    align-items: center;
     flex-direction: column;
-    padding: 30px;
-}
-
-#code{
+    align-items: center;
+    text-align: center;
     background-color: #D9D9D9;
-    width: 4.1875rem;
-    height: 4.1875rem;
-    flex-shrink: 0;
-    margin-bottom: 30px;
+    width: 100%;
+    height: 400px;
+    justify-content: center;
 }
 
-.footer h2{
-text-align: center;
-font-size: 1.5rem;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-background-color: #D9D9D9;
-margin-bottom: 40px;
+.fot{
+    width: 150px;
+    height: 130px;
+}
+
+.h1-5{
+    font-size: 30px;
+    font-weight: 400;
+    font-style: normal;
 }
 
 span{
-color: #440381;
-font-size: 1.5rem;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-background-color: #D9D9D9;
+    color: #440381;
+    font-size: 30px;
+    font-weight: 400;
+    font-style: normal;
 }
 
-span:hover{
-    color: #3332BB;
+.social{
+    padding: 30px;
+    width: 400px;
+    height: 100px;
 }
 
-#arrow{
-    background-color: #D9D9D9;
-    width: 13.125rem;
-    height: 6.8rem;
-    flex-shrink: 0;
-    margin-bottom: 30px;
+@media screen and (min-width: 1024px) and (max-width: 1200px){
+    :root{
+    --base-font-size: 16px;
+    }
+    
+    *{
+        width: 100%;
+        font-size: calc(var(--base-font-size) * 0.8);
+    }
+    .header{
+        width: 100%;
+        padding: 10px 10px;
+    }
+    
+    .images{
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 10px;
+    }
+    
+    .section-2{
+        width: 100%;
+        height: 400px;
+    }
+    .p-2{
+        width: 90%;
+        height: 300px;
+        font-size: 110%;
+    }
+
+    .lan{
+        width: 90%;
+        margin-top: 1100px;
+    }
+
+    .section-4{
+        margin-top: 50px;
+    }
+
+    .pc{
+        width: 60%;
+        height: auto;
+    }
+    .info{
+        width: 500px;
+        height: 1500px;
+        margin-top: 150px;
+    }
+
+    .footer{
+        font-size: 80%;
+    }
+    .section-3{
+        margin-top: 1100px;
+    }
+}
+
+.scroll-to-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #3332BB;
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    padding: 10px;
+    cursor: pointer;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 9999;
+    width: 80px;
+}
+.scroll-to-top img {
+    color: #F9F9F9;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    :root{
+    --base-font-size: 14px;
+    }
+    *{
+        width: 100%;
+        font-size: calc(var(--base-font-size) * 0.8);
+    }
+    .header{
+        width: 100%;
+        padding: 10px 10px;
+    }
+    .btn{
+        font-size:medium;
+    }
+    .btn-2{
+        font-size:medium;
+    }
+    .images{
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 10px;
+    }
+    
+    .section-2{
+        width: 100%;
+        height: 400px;
+    }
+    .p-2{
+        width: 90%;
+        height: 300px;
+        font-size: 110%;
+    }
+
+    .lan{
+        width: 90%;
+        margin-top: 1100px;
+    }
+
+    .section-4{
+        margin-top: 50px;
+    }
+
+    .pc{
+        width: 60%;
+        height: auto;
+    }
+    .info{
+        width: 500px;
+        height: 1500px;
+        margin-top: 150px;
+    }
+
+    .h1-5,span{
+        font-size: 20px;
+    }
+    .social{
+        width: 50%;
+    }
+    .section-3{
+        margin-top: 1100px;
+    }
+    .p-1{
+        width: 80%;
+    }
+    .h3-3{
+        width: auto;
+    }
+    .review{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    :root{
+        --base-font-size: 14px;
+        }
+        *{
+            width: 100%;
+            font-size: calc(var(--base-font-size) * 0.8);
+
+        }
+        .header{
+            width: 100%;
+            padding: 10px 10px;
+        }
+        .btn{
+            font-size:medium;
+        }
+        .btn-2{
+            font-size:medium;
+        }
+        .images{
+            grid-template-columns: repeat(1,1fr);
+            grid-gap: 10px;
+        }
+        
+        .section-2{
+            width: 100%;
+            height: 400px;
+        }
+        .p-2{
+            width: 90%;
+            height: 300px;
+            font-size: 110%;
+        }
+    
+        .lan{
+            width: 90%;
+            margin-top: 1100px;
+        }
+    
+        .section-4{
+            margin-top: 50px;
+        }
+    
+        .pc{
+            width: 60%;
+            height: auto;
+        }
+        .info{
+            width: 500px;
+            height: 1500px;
+            margin-top: 150px;
+        }
+    
+        .h1-5,span{
+            font-size: 20px;
+        }
+        .social{
+            width: 50%;
+        }
+        .section-3{
+            margin-top: 1100px;
+        }
+        .p-1{
+            width: 80%;
+        }
+        .h3-3{
+            width: auto;
+        }
+        .review{
+            width: 80%;
+        }
+
+        .h3-4{
+            width: auto;
+        }
+        .h1-2{
+            width: auto;
+        }
 }
